The program now sends an email whenever you refer a friend